[gd_scene load_steps=12 format=2]

[ext_resource path="res://MiSans/MiSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MiSans/MiSans-Heavy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MiSans/MiSans-Normal.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://login/login.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 598.0
color = Color( 0.435294, 0.627451, 0.85098, 1 )

[node name="Message" type="Label" parent="."]
margin_left = -2.0
margin_top = 119.0
margin_right = 1020.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 1 )
text = "猫咪信息管理系统"
align = 1

[node name="EnterField" type="VBoxContainer" parent="."]
margin_top = 217.0
margin_right = 1022.0
margin_bottom = 329.0

[node name="User" type="HBoxContainer" parent="EnterField"]
margin_right = 1022.0
margin_bottom = 57.0

[node name="useraccount" type="Label" parent="EnterField/User"]
margin_right = 407.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "账号"
align = 1
valign = 1

[node name="UserAccount" type="LineEdit" parent="EnterField/User"]
margin_left = 411.0
margin_right = 1022.0
margin_bottom = 57.0
size_flags_horizontal = 7
size_flags_vertical = 7
size_flags_stretch_ratio = 1.5
custom_fonts/font = SubResource( 3 )
clear_button_enabled = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Pass" type="HBoxContainer" parent="EnterField"]
margin_top = 61.0
margin_right = 1022.0
margin_bottom = 118.0

[node name="password" type="Label" parent="EnterField/Pass"]
margin_right = 407.0
margin_bottom = 57.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 4 )
text = "密码"
align = 1
valign = 1

[node name="PassWord" type="LineEdit" parent="EnterField/Pass"]
margin_left = 411.0
margin_right = 1022.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_fonts/font = SubResource( 5 )
secret = true
clear_button_enabled = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Buttons" type="HBoxContainer" parent="."]
margin_top = 382.0
margin_right = 1022.0
margin_bottom = 442.0

[node name="ConfirmButton" type="Button" parent="Buttons"]
margin_right = 387.0
margin_bottom = 60.0
size_flags_horizontal = 7
custom_fonts/font = SubResource( 6 )
text = "确认"

[node name="Node2D" type="Label" parent="Buttons"]
margin_left = 391.0
margin_right = 630.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.62

[node name="SigninButton" type="Button" parent="Buttons"]
margin_left = 634.0
margin_right = 1022.0
margin_bottom = 60.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 7 )
text = "注册"

[connection signal="resized" from="." to="." method="_on_Login_resized"]
